<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".PantallaPrincipalActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/editarRegistroButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/editar_registro" />

        <Button
            android:id="@+id/cerrarSesionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/cerrar_sesion" />

    </LinearLayout>
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"

        android:src="@drawable/cocin_app_logo" />

    <TextView
        android:id="@+id/cocinAppTextView"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-3dp"
        android:fontFamily="@font/niconne"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/usuarioLogeadoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/niconne"
        android:text="¿En qué podemos ayudarte?"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="200dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/hacerPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nuevo_pedido" />

        <Button
            android:id="@+id/editarPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/editar_pedido" />
        <Button
            android:id="@+id/verPedidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/historio_pedidos" />


    </LinearLayout>



</LinearLayout>
