<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context=".VerDetallesPedidoActivity">
    <TextView
        android:id="@+id/confirmarPedidoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-3dp"
        android:text="@string/detallesDelPedido"
        android:textColor="#000000"
        android:textSize="40sp"
        android:fontFamily="@font/niconne"
        android:textStyle="bold"
        />

    <ListView
        android:id="@+id/listaDetalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:background="@drawable/fondo"
        android:descendantFocusability="beforeDescendants"
        android:divider="@android:color/black"
        android:dividerHeight="1dp" />

    <TextView
        android:layout_marginTop="0dp"
        android:id="@+id/fechaPedidoDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/fecha_pedido"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/fechaPedidoEntregaDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/fecha_entrega"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/cometariosPedidoDEtalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/comentarios"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/totaPedidoDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/total"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textStyle="bold" />
    <Button
        android:id="@+id/volverPedidosButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/volver"
        />


</LinearLayout>