<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:padding="16dp"
    tools:context=".EditarRegistroActivity">

    <ImageView
        android:id="@+id/logoImageViewRegistro"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:src="@drawable/cocin_app_logo" />

    <TextView
        android:id="@+id/cocinAppTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageViewRegistro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-3dp"
        android:text="@string/modificar_resitro_string"
        android:textColor="#000000"
        android:textSize="40sp"
        android:fontFamily="@font/niconne"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/modNombreLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cocinAppTextView"
        android:layout_marginTop="16dp"
        android:text="@string/nombre"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        />


    <EditText
        android:id="@+id/modNombreEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/modNombreLabel"
        android:inputType="textMultiLine|text|textCapSentences"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/edittext_background"/>

    <TextView
        android:id="@+id/modApellidoLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modNombreEditText"
        android:layout_marginTop="16dp"
        android:text="@string/apellidos"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        />


    <EditText
        android:id="@+id/modApellidoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/modApellidoLabel"
        android:inputType="textMultiLine|text|textCapSentences"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/edittext_background"/>

    <TextView
        android:id="@+id/modDepartamentoLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/modApellidoEditText"
        android:layout_marginTop="16dp"
        android:text="@string/departamento"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/modDepartamentoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/modDepartamentoLabel"
        android:inputType="textMultiLine|text|textCapSentences"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/edittext_background"/>

    <TextView
        android:id="@+id/modTelefonoLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/modDepartamentoEditText"
        android:layout_marginTop="16dp"
        android:text="@string/telefono"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/modTelefonoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/modTelefonoLabel"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/edittext_background"/>

    <Button
        android:id="@+id/modRegistroButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/modTelefonoEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/boton_redondeado"
        android:text="@string/modificar_registro"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/cancelRegistroButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"
        android:textColor="@color/white"
        android:background="@drawable/boton_redondeado"
        android:layout_centerHorizontal="true"
        android:text="@string/cancelar" />



</RelativeLayout>