<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <!-- Fondo -->
    <ImageView
        android:id="@+id/fondoImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:src="@drawable/fondo"
        android:alpha="0.5" />

    <!-- Contenido encima del fondo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:src="@drawable/cocina_app_logo" />

    <TextView
        android:id="@+id/usuarioLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_marginTop="16dp"
        android:text="@string/usuario"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/usuarioEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usuarioLabel"
        android:inputType="text"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/contrasenaLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usuarioEditText"
        android:layout_marginTop="16dp"
        android:text="@string/contrasena"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/contrasenaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contrasenaLabel"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/olvidoContrasenaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contrasenaEditText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:text="@string/recordatorio_contrasena"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/olvidoContrasenaTextView"
        android:layout_marginTop="16dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/registroTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/registro" />

</RelativeLayout>

