<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:padding="16dp"
    tools:context=".RegistroActivity">

    <ImageView
        android:id="@+id/logoImageViewRegistro"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:src="@drawable/cocin_app_logo" />

    <TextView
        android:id="@+id/cocinAppTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageViewRegistro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-3dp"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="40sp"
        android:fontFamily="@font/niconne"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/nombreApellidoLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cocinAppTextView"
        android:layout_marginTop="16dp"
        android:text="@string/nombre_y_apellidos"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        />


    <EditText
        android:id="@+id/nombreApellidoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombreApellidoLabel"
        android:inputType="textMultiLine|text|textCapSentences"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/departamentoLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombreApellidoEditText"
        android:layout_marginTop="16dp"
        android:text="@string/departamento"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/departamentoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/departamentoLabel"
        android:inputType="textMultiLine|text|textCapSentences"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/telefonoLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/departamentoEditText"
        android:layout_marginTop="16dp"
        android:text="@string/telefono"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/telefonoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/telefonoLabel"
        android:inputType="phone"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/telefonoEditText"
        android:layout_marginTop="16dp"
        android:text="@string/correo_electronico"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailLabel"
        android:inputType="textWebEmailAddress"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/contrasenaLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="16dp"
        android:text="@string/contrasena"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/contrasenaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contrasenaLabel"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/repetirContrasenaLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contrasenaEditText"
        android:layout_marginTop="16dp"
        android:text="@string/repetir_contrasena"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/repetirContrasenaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/repetirContrasenaLabel"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/registroButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/repetirContrasenaEditText"
        android:layout_marginTop="16dp"
        android:text="@string/registrarse" />

</RelativeLayout>
