<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context=".ModificarPedidoActivity">
    <TextView
        android:id="@+id/detallesModtituloTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-3dp"
        android:text="@string/modificar_pedido"
        android:textColor="#000000"
        android:textSize="40sp"
        android:fontFamily="@font/niconne"
        android:layout_gravity="center"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/idPedidoModTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_gravity="left"
        android:background="@color/principal"
        />

    <ListView
        android:id="@+id/listaDetalleMod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:background="@drawable/fondo"
        android:descendantFocusability="beforeDescendants"
        android:divider="@android:color/black"
        android:dividerHeight="0dp" />

    <TextView
        android:layout_marginTop="0dp"
        android:id="@+id/fechaPedidoDetalleMod"
        android:text="@string/fecha_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textSize="18sp"
        android:background="@color/principal"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_marginTop="0dp"
        android:id="@+id/fechaPedidoDetalleTextMod"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="18sp"
        android:paddingStart="12dp"
        android:background="@color/white"
        />
    <TextView
        android:id="@+id/fechaPedidoEntregaDetalle"
        android:text="@string/fecha_entrega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textSize="18sp"
        android:background="@color/principal"
        android:textColor="@color/white" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/fechaEntregaModTextview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fecha_entrega"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:paddingStart="12dp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/seleccionarFechaEntregaButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/NuevafechaEntrega"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:id="@+id/cometariosPedidoDEtalleMod"
        android:text="@string/comentarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textSize="18sp"
        android:background="@color/principal"
        android:textColor="@color/white" />
    <EditText
        android:layout_marginTop="0dp"
        android:id="@+id/cometariosDetalleTextMod"
        android:text="@string/comentarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingStart="12dp"
        android:lines="3"
        android:background="@color/white"
        tools:ignore="Deprecated" />

    <TextView
        android:id="@+id/totaPedidoDetalleMod"
        android:text="@string/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textSize="18sp"
        android:background="@color/principal"
        android:textColor="@color/white" />
    <TextView
        android:layout_marginTop="0dp"
        android:id="@+id/totalDetalleTextMod"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingStart="12dp"
        android:background="@color/white"
        />
    <Button
        android:id="@+id/confirmModPedidoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/modPedido"
        />
    <Button
        android:id="@+id/volverDetallesPedidosButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/volver"
        />


</LinearLayout>